--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -8,16 +8,18 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
 
-    @media screen and (max-width: 90em) {
+    @media screen and (max-width: 75em) {
         font-size: 50%;
     }
     @media screen and (max-width: 55em) {
-        font-size: 35%;
+        font-size: 40%;
     }
     @media screen and (max-width: 40em) {
+        font-size: 30%;
+    }
+    @media screen and (max-width: 20em) {
         font-size: 25%;
     }
-
 }
 
 body {
