--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,12 +16,33 @@ $font-one : 'Inter', 'sans-serif';
     }
     &__lead {
         font-size: 2.8rem;
+        @media screen and (max-width: 64em) {
+            font-size: 2.5rem;
+        }
+        @media screen and (max-width: 50em) {
+            font-size: 3rem;
+        }
     }
     &__paragraph {
         font-size: 1.6rem;
+        line-height: 2.8rem;
+        @media screen and (max-width: 64em) {
+            font-size: 2.2rem;
+        }
+        @media screen and (max-width: 50em) {
+            font-size: 2.8rem;
+            line-height: 3.6rem;
+        }
     }
     &__button {
         font-size: 1.6rem;
+        @media screen and (max-width: 64em) {
+            font-size: 2.2rem;
+        }
+        @media screen and (max-width: 50em) {
+            font-size: 2.8rem;
+            line-height: 3.6rem;
+        }
     }
 }
 
