--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,5 +1,7 @@
 .container {
     display : grid;
     grid-template-columns: repeat(2, [start-bleed] 50%  [end-bleed] );
-    grid-template-rows: calc(100vh) repeat(2, min-content);
+    grid-template-rows: minmax(calc(100vh - 10rem), min-content) repeat(2, min-content);
 }
+
+
