--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,11 @@ body {
   grid-template-columns: repeat(2, [start-bleed] 50% [end-bleed]);
   grid-template-rows: minmax(calc(100vh - 10rem), min-content) repeat(2, min-content);
 }
+@media screen and (max-width: 40em) {
+  .container {
+    grid-template-rows: 100vh repeat(2, min-content);
+  }
+}
 
 .recent {
   grid-column: start-bleed/span 2;
