--- a/sass/layout/_recent.scss
+++ b/sass/layout/_recent.scss
@@ -48,9 +48,13 @@
         display: flex;
         justify-content: center;
         font-size: 2rem;
+        margin-bottom: 1rem;
+        h4 {
+            font-size: 1.3rem;
+        }
     }
     &__last {
         display: flex;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 }
